updated components with nginx conf

--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -249,7 +249,7 @@ ingress:
   hostname: forms-flow-admin.local
   ## @param ingress.path [string] Default path for the ingress record (evaluated as template)
   ##
-  path: "/"
+  path: "/admin"
   ## @param ingress.servicePort Backend service port to use
   ## Default is http. Alternative is https.
   ##
@@ -418,6 +418,10 @@ service:
       port: 5000
       targetPort: http
       protocol: TCP
+    - name: nginx
+      port: 80
+      targetPort: 80
+      protocol: TCP
       ## - name: system
       ##   port: 1764
       ##
@@ -482,7 +486,15 @@ containerPorts:
   ##      - mountPath: /usr/share/filebeat/filebeat.yml
   ##        subPath: filebeat.yml
   ##        name: admin-filebeat
-sidecars: []
+sidecars:
+  - name: nginx
+    image: nginx:latest
+    ports:
+      - containerPort: 80
+    volumeMounts:
+      - name: nginx-config-volume
+        mountPath: /etc/nginx/nginx.conf
+        subPath: nginx.conf
 
 configuration: []
 
