--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -195,6 +195,16 @@ extraVolumes: {}
 ##     readOnly: true
 ##
 extraVolumeMounts: {}
+## sidecars configuration
+sidecars:
+  - name: nginx
+    image: nginx:latest
+    ports:
+      - containerPort: 80
+    volumeMounts:
+      - name: nginx-config-volume
+        mountPath: /etc/nginx/nginx.conf
+        subPath: nginx.conf
 
 ## @param auth.existingSecret Existing secret containing password,username,dbname and 
   ##
@@ -229,7 +239,7 @@ ingress:
   ingressClassName: ""
   ## @param ingress.pathType Ingress path type
   ##
-  pathType: ImplementationSpecific
+  pathType: Prefix
   ## @param ingress.apiVersion Force Ingress API version (automatically detected if not set)
   ##
   apiVersion: ""
@@ -243,7 +253,7 @@ ingress:
   hostname: forms-flow-api.local
   ## @param ingress.path [string] Default path for the ingress record (evaluated as template)
   ##
-  path: "/"
+  path: "/api"
   ## @param ingress.servicePort Backend service port to use
   ## Default is http. Alternative is https.
   ##
@@ -391,6 +401,10 @@ service:
     - name: http
       port: 5000
       targetPort: http
+      protocol: TCP 
+    - name: nginx
+      port: 80
+      targetPort: 80
       protocol: TCP
       ## - name: system
       ##   port: 1764
