--- a/charts/forms-flow-data-analysis/templates/configmap.yaml
+++ b/charts/forms-flow-data-analysis/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "common.names.fullname" . }}
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
-    app.kubernetes.io/component: forms-flow-admin
+    app.kubernetes.io/component: forms-flow-data-analysis
   {{- if .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
   {{- end }}
