--- a/charts/forms-flow-documents-api/templates/deployment.yaml
+++ b/charts/forms-flow-documents-api/templates/deployment.yaml
@@ -113,7 +113,7 @@ spec:
           - name: FORMIO_URL
             valueFrom:
               configMapKeyRef:
-                key: FORMIO_SERVICE_URL
+                key: FORMIO_URL
                 name: "{{ .Values.formsflow.configmap }}"
           - name: FORMIO_ROOT_EMAIL
             valueFrom:
@@ -148,7 +148,7 @@ spec:
           - name: FORMSFLOW_DOC_API_URL
             valueFrom:
               configMapKeyRef:
-                key: FORMSFLOW_DOC_API_SERVICE_URL
+                key: FORMSFLOW_DOC_API_URL
                 name: "{{ .Values.formsflow.configmap }}"
           - name: CONFIGURE_LOGS
             valueFrom:
@@ -194,9 +194,15 @@ spec:
             {{- if .Values.extraVolumeMounts }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumeMounts "context" $) | nindent 12 }}
             {{- end }}
+            {{- if .Values.sidecars }}
+            {{- include "common.tplvalues.render" ( dict "value" .Values.sidecars "context" $) | nindent 8 }}
+            {{- end }}
       volumes:
       - name: documents-logs
         emptyDir: {}
+      - name: nginx-config-volume
+        configMap:
+          name: forms-flow-documents-api-nginx-config  
         {{- if .Values.extraVolumes }}
         {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumes "context" $) | nindent 8 }}
         {{- end }}
