--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -12,47 +12,13 @@ formsflowdb:
 forms-flow-bpm:
   clientid: "forms-flow-bpm"
   clientsecret: "e4bdbd25-1467-4f7f-b993-bc4b1944c943"
-  ingress:
-    hostname: forms-flow-bpm-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  service:
-    name: forms-flow-bpm
-    port: "8080"
 forms-flow-forms:
   admin:
     email: "me@defineme.com"
     password: "admin"
-  ingress:
-    hostname: forms-flow-forms-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
   service:
     name: forms-flow-forms
     port: "3001"
-forms-flow-api:
-  ingress:
-    hostname: forms-flow-api-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  service:
-    name: forms-flow-api
-    port: "5000"
-forms-flow-admin:
-  ingress:
-    hostname: forms-flow-admin-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  service:
-    name: forms-flow-admin
-    port: "5000"
-forms-flow-documents-api:
-  ingress:
-    hostname: forms-flow-documents-api-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  service:
-    name: forms-flow-documents-api
-    port: "5006"
-forms-flow-data-analysis:
-  ingress:
-    hostname: forms-flow-data-analysis-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  service:
-    name: forms-flow-data-analysis
-    port: "5000"
-forms-flow-analytics:
-  ingress:
-    hostname: forms-flow-analytics-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
 forms-flow-idm:
   keycloak:
     EnableKeycloakClientAuth: false
@@ -206,7 +172,7 @@ mongodb:
 
   persistence:
     enabled: true
-    storageClass: ""
+    storageClass: "gp2"
     accessModes:
       - ReadWriteOnce
     size: 8Gi
@@ -567,7 +533,7 @@ postgresql-ha:
     ## If undefined (the default) or set to null, no storageClassName spec is
     ## set, choosing the default provisioner.
     ##
-    storageClass: ""
+    storageClass: "gp2"
     ## @param persistence.mountPath The path the volume will be mounted at, useful when using different PostgreSQL images.
     ##
     mountPath: /bitnami/postgresql
@@ -780,7 +746,7 @@ redisExporter:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    storageClass: ""
+    storageClass: "gp2"
     ## @param persistence.annotations Persistent Volume Claim annotations
     ##
     annotations: {}
