--- a/charts/forms-flow-api/templates/ingress.yaml
+++ b/charts/forms-flow-api/templates/ingress.yaml
@@ -27,7 +27,11 @@ spec:
             {{- if eq "true" (include "common.ingress.supportsPathType" .) }}
             pathType: {{ .Values.ingress.pathType }}
             {{- end }}
-            backend: {{- include "common.ingress.backend" (dict "serviceName" (include "common.names.fullname" .) "servicePort" .Values.ingress.servicePort "context" $)  | nindent 14 }}
+            backend:
+              service:
+                name: {{ include "common.names.fullname" . }}
+                port:
+                  number: 80
     {{- end }}
     {{- range .Values.ingress.extraHosts }}
     - host: {{ (tpl .name $) }}
