--- a/charts/forms-flow-data-analysis/templates/deployment.yaml
+++ b/charts/forms-flow-data-analysis/templates/deployment.yaml
@@ -61,141 +61,146 @@ spec:
       securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.podSecurityContext "context" $) | nindent 8 }}
       {{- end }}
       containers:
-      - name: forms-flow-data-analysis
-        image: {{ include "forms-flow-data-analysis.image" . }}
-        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
-        {{- if .Values.containerSecurityContext.enabled }}
-        securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 12 }}
-        {{- end }}
-        {{- if .Values.diagnosticMode.enabled }}
-        command: {{- include "common.tplvalues.render" (dict "value" .Values.diagnosticMode.command "context" $) | nindent 12 }}
-        {{- else if .Values.command }}
-        command: {{- include "common.tplvalues.render" (dict "value" .Values.command "context" $) | nindent 12 }}
-        {{- end }}
-        {{- if .Values.diagnosticMode.enabled }}
-        args: {{- include "common.tplvalues.render" (dict "value" .Values.diagnosticMode.args "context" $) | nindent 12 }}
-        {{- else if .Values.args }}
-        args: {{- include "common.tplvalues.render" (dict "value" .Values.args "context" $) | nindent 12 }}
-        {{- end }}
-        {{- if .Values.lifecycleHooks }}
-        lifecycle: {{- include "common.tplvalues.render" (dict "value" .Values.lifecycleHooks "context" $) | nindent 12 }}
-        {{- end }}
-        env:
-        - name: OPENAI_API_KEY
-          valueFrom:
-            configMapKeyRef:
-              key: OPENAI_API_KEY
-              name: "{{ .Chart.Name }}"
-        - name: CHAT_BOT_MODEL_ID
-          valueFrom:
-            configMapKeyRef:
-              key: CHAT_BOT_MODEL_ID
-              name: "{{ .Chart.Name }}"
-        - name: KEYCLOAK_URL
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_URL
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: KEYCLOAK_URL_REALM
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_URL_REALM
-              name: "{{ .Values.formsflow.configmap }}"        
-        - name: KEYCLOAK_WEB_CLIENT_ID
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_WEB_CLIENT_ID
-              name: "{{ .Chart.Name }}" 
-        - name: DATA_ANALYSIS_API_BASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: DATA_ANALYSIS_URL
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_ALGORITHMS
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_ALGORITHMS
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_AUDIENCE
-          valueFrom:
-            secretKeyRef:
-              key: ADMIN_WEB_CLIENTID
-              name: "{{ .Values.formsflow.secret }}"
-        - name: JWT_OIDC_CACHING_ENABLED
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_CACHING_ENABLED
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_ISSUER
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_ISSUER
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_JWKS_CACHE_TIMEOUT
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_JWKS_URI
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_JWKS_URI
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: JWT_OIDC_WELL_KNOWN_CONFIG
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_JWT_OIDC_CONFIG
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: DATABASE_SUPPORT
-          valueFrom:
-            configMapKeyRef:
-              key: DATABASE_SUPPORT
-              name: "{{ .Chart.Name }}"
-        - name: MODEL_ID
-          valueFrom:
-            configMapKeyRef:
-              key: MODEL_ID
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: KEYCLOAK_URL_HTTP_RELATIVE_PATH
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_URL_HTTP_RELATIVE_PATH
-              name: "{{ .Values.formsflow.configmap }}"
-        {{- if .Values.extraEnvVars }}
-        {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 8 }}
-        {{- end }}
-        envFrom:
-          {{- if .Values.extraEnvVarsCM }}
-          - configMapRef:
-              name: {{ include "common.tplvalues.render" (dict "value" .Values.extraEnvVarsCM "context" $) }}
+        - name: forms-flow-data-analysis
+          image: {{ include "forms-flow-data-analysis.image" . }}
+          imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+          {{- if .Values.containerSecurityContext.enabled }}
+          securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 12 }}
           {{- end }}
-          {{- if .Values.extraEnvVarsSecret }}
-          - secretRef:
-              name: {{ include "common.tplvalues.render" (dict "value" .Values.extraEnvVarsSecret "context" $) }}
+          {{- if .Values.diagnosticMode.enabled }}
+          command: {{- include "common.tplvalues.render" (dict "value" .Values.diagnosticMode.command "context" $) | nindent 12 }}
+          {{- else if .Values.command }}
+          command: {{- include "common.tplvalues.render" (dict "value" .Values.command "context" $) | nindent 12 }}
           {{- end }}
-        {{- if .Values.resources }}
-        resources: {{- toYaml .Values.resources | nindent 12 }}
-        {{- else if ne .Values.resourcesPreset "none" }}
-        resources: {{- include "common.resources.preset" (dict "type" .Values.resourcesPreset) | nindent 12 }}
-        {{- end }}
-        ports:
-        - name: http
-          containerPort: {{ .Values.containerPorts.http }}
-          protocol: TCP
-        stdin: true
-        tty: true 
-        volumeMounts:
-        - name: data-analysis-logs
-          mountPath: /forms-flow-data-analysis/app/logs    
-          {{- if .Values.extraVolumeMounts }}
-          {{- include "common.tplvalues.render" ( dict "value" .Values.extraVolumeMounts "context" $ ) | nindent 12 }}
+          {{- if .Values.diagnosticMode.enabled }}
+          args: {{- include "common.tplvalues.render" (dict "value" .Values.diagnosticMode.args "context" $) | nindent 12 }}
+          {{- else if .Values.args }}
+          args: {{- include "common.tplvalues.render" (dict "value" .Values.args "context" $) | nindent 12 }}
           {{- end }}
-        {{- if .Values.sidecars }}
-        {{- include "common.tplvalues.render" ( dict "value" .Values.sidecars "context" $) | nindent 8 }}
-        {{- end }}
+          {{- if .Values.lifecycleHooks }}
+          lifecycle: {{- include "common.tplvalues.render" (dict "value" .Values.lifecycleHooks "context" $) | nindent 12 }}
+          {{- end }}
+          env:
+          - name: OPENAI_API_KEY
+            valueFrom:
+              configMapKeyRef:
+                key: OPENAI_API_KEY
+                name: "{{ .Chart.Name }}"
+          - name: CHAT_BOT_MODEL_ID
+            valueFrom:
+              configMapKeyRef:
+                key: CHAT_BOT_MODEL_ID
+                name: "{{ .Chart.Name }}"
+          - name: KEYCLOAK_URL
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_URL
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: KEYCLOAK_URL_REALM
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_URL_REALM
+                name: "{{ .Values.formsflow.configmap }}"        
+          - name: KEYCLOAK_WEB_CLIENT_ID
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_WEB_CLIENT_ID
+                name: "{{ .Chart.Name }}" 
+          - name: DATA_ANALYSIS_API_BASE_URL
+            valueFrom:
+              configMapKeyRef:
+                key: DATA_ANALYSIS_URL
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_ALGORITHMS
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_ALGORITHMS
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_AUDIENCE
+            valueFrom:
+              secretKeyRef:
+                key: ADMIN_WEB_CLIENTID
+                name: "{{ .Values.formsflow.secret }}"
+          - name: JWT_OIDC_CACHING_ENABLED
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_CACHING_ENABLED
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_ISSUER
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_ISSUER
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_JWKS_CACHE_TIMEOUT
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_JWKS_URI
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_JWKS_URI
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: JWT_OIDC_WELL_KNOWN_CONFIG
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_JWT_OIDC_CONFIG
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: DATABASE_SUPPORT
+            valueFrom:
+              configMapKeyRef:
+                key: DATABASE_SUPPORT
+                name: "{{ .Chart.Name }}"
+          - name: MODEL_ID
+            valueFrom:
+              configMapKeyRef:
+                key: MODEL_ID
+                name: "{{ .Values.formsflow.configmap }}"
+          - name: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+            valueFrom:
+              configMapKeyRef:
+                key: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+                name: "{{ .Values.formsflow.configmap }}"
+          {{- if .Values.extraEnvVars }}
+          {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 8 }}
+          {{- end }}
+          {{- if or .Values.extraEnvVarsCM .Values.extraEnvVarsSecret }}
+          envFrom:
+            {{- if .Values.extraEnvVarsCM }}
+            - configMapRef:
+                name: {{ include "common.tplvalues.render" (dict "value" .Values.extraEnvVarsCM "context" $) }}
+            {{- end }}
+            {{- if .Values.extraEnvVarsSecret }}
+            - secretRef:
+                name: {{ include "common.tplvalues.render" (dict "value" .Values.extraEnvVarsSecret "context" $) }}
+            {{- end }}
+          {{- end }}
+          ports:
+          - name: http
+            containerPort: {{ .Values.containerPorts.http }}
+            protocol: TCP
+          stdin: true
+          tty: true
+          {{- if .Values.resources }}
+          resources: {{- toYaml .Values.resources | nindent 12 }}
+          {{- else if ne .Values.resourcesPreset "none" }}
+          resources: {{- include "common.resources.preset" (dict "type" .Values.resourcesPreset) | nindent 12 }}
+          {{- end }}
+          volumeMounts: 
+          - name: data-analysis-logs
+            mountPath: /forms-flow-data-analysis/app/logs    
+            {{- if .Values.extraVolumeMounts }}
+            {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumeMounts "context" $) | nindent 12 }}
+            {{- end }}
+            {{- if .Values.sidecars }}
+            {{- include "common.tplvalues.render" ( dict "value" .Values.sidecars "context" $) | nindent 8 }}
+            {{- end }}
       volumes:
       - name: data-analysis-logs
         emptyDir: {}
+      - name: nginx-config-volume
+        configMap:
+          name: forms-flow-data-analysis-nginx-config       
       {{- if .Values.extraVolumes }}
       {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumes "context" $) | nindent 8 }}
       {{- end }}
