--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -527,7 +527,7 @@ postgresql-ha:
     ## If undefined (the default) or set to null, no storageClassName spec is
     ## set, choosing the default provisioner.
     ##  
-    storageClass: "gp2"
+    storageClass: ""
     ## @param persistence.mountPath The path the volume will be mounted at, useful when using different PostgreSQL images.
     ##  
     mountPath: /bitnami/postgresql
