updated proxy config for analytics

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -406,7 +406,7 @@ ingress:
   #  - secretName: forms-flow-analytics-test.aot-technologies.com-tls
   #    hosts:
   #      - forms-flow-analytics-test.aot-technologies.com
-
+  subFilterHost: chart-example.local
 ## Configuration for Redash workers
 workers:
   adhoc:
