--- a/charts/forms-flow-analytics/templates/proxy-config.yaml
+++ b/charts/forms-flow-analytics/templates/proxy-config.yaml
@@ -17,12 +17,11 @@ data:
           sub_filter url(/static/fonts) url(/redash/static/fonts);
           sub_filter_once off;
           sub_filter_types application/javascript text/css text/xml text/javascript application/json text/plain;
-          sub_filter "http://" "https://";
           proxy_set_header Host $http_host;
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
-
+          sub_filter "http:///{{.Values.ingress.subFilterHost}}/" "https://{{.Values.ingress.subFilterHost}}/";    
           proxy_set_header SCRIPT_NAME /redash;
           
           proxy_pass http://localhost:{{.Values.server.httpPort}};
