updated postgresql version and mongodb

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -49,7 +49,7 @@ imageCredentials:
 ##
 mongodb:
   image:
-    tag: 7.0.12-debian-12-r5 #4.2.21-debian-10-r8
+    tag: 8.0.3-debian-12-r0 #4.2.21-debian-10-r8
     pullSecrets:
       - forms-flow-auth
   enabled: true
@@ -136,7 +136,11 @@ mongodb:
   ##  
   podSecurityContext:
     enabled: false
+    fsGroupChangePolicy: Always
+    sysctls: []
+    supplementalGroups: []
     fsGroup: 1001
+
   ## MongoDB(&reg;) containers' Security Context (main and metrics container).
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
   ## @param containerSecurityContext.enabled Enabled containers' Security Context
@@ -152,8 +156,17 @@ mongodb:
   ##
   containerSecurityContext:
     enabled: false
+    seLinuxOptions: {}
     runAsUser: 1001
+    runAsGroup: 1001
     runAsNonRoot: true
+    privileged: false
+    readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop: ["ALL"]
+    seccompProfile:
+      type: "RuntimeDefault"
   ## @param containerPorts.mongodb MongoDB(&reg;) container port
   ##
   containerPorts:
@@ -233,7 +246,7 @@ postgresql-ha:
     image:
       registry: docker.io
       repository: bitnami/postgresql-repmgr
-      tag: 16.3.0-debian-12-r20
+      tag: 17.2.0-debian-12-r3
       ## Specify a imagePullPolicy. Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
       ##
@@ -289,7 +302,7 @@ postgresql-ha:
     ##
     containerSecurityContext:
       enabled: false
-      seLinuxOptions: null
+      seLinuxOptions: {}
       runAsUser: 1001
       runAsGroup: 1001
       runAsNonRoot: true
@@ -412,7 +425,7 @@ postgresql-ha:
     image:
       registry: docker.io
       repository: bitnami/pgpool
-      tag: 4.5.2-debian-12-r5
+      tag: 4.5.5-debian-12-r0
       digest: ""
       ## Specify a imagePullPolicy. Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
@@ -465,7 +478,7 @@ postgresql-ha:
     ##
     containerSecurityContext:
       enabled: false
-      seLinuxOptions: null
+      seLinuxOptions: {}
       runAsUser: 1001
       runAsGroup: 1001
       runAsNonRoot: true
