--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -7,8 +7,8 @@ dependencies:
     repository: "https://charts.bitnami.com/bitnami"
   - name: postgresql-ha
     condition: postgresql-ha.enabled 
-    repository: https://charts.bitnami.com/bitnami
-    version: 14.2.16
+    repository: oci://registry-1.docker.io/bitnamicharts
+    version: 15.x.x
   - name: common
     repository: oci://registry-1.docker.io/bitnamicharts
     version: 2.x.x
