--- a/charts/forms-flow-api/templates/proxy-config.yaml
+++ b/charts/forms-flow-api/templates/proxy-config.yaml
@@ -14,8 +14,8 @@ data:
     http {
       server {
         listen 80;
-        location /api {
-          sub_filter ="/api/swaggerui/ ="/api/swaggerui/;
+        location /webapi {
+          sub_filter ="/webapi/swaggerui/ ="/webapi/swaggerui/;
           sub_filter_once off;
           sub_filter_types application/javascript text/css text/xml text/javascript application/json text/plain;
 
@@ -23,7 +23,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_set_header SCRIPT_NAME /api;
+          proxy_set_header SCRIPT_NAME /webapi;
           proxy_pass http://localhost:{{ .Values.ingress.servicePort }};
         }
       }
