--- a/charts/forms-flow-web/templates/template-configmap.yaml
+++ b/charts/forms-flow-web/templates/template-configmap.yaml
@@ -46,5 +46,8 @@ data:
         "REACT_APP_ENABLE_CHATBOT": "${REACT_APP_ENABLE_CHATBOT}",
         "REACT_APP_CHATBOT_URL": "${REACT_APP_CHATBOT_URL}",
         "REACT_APP_ENABLE_LOW_CODE_DESIGNER": "${ENABLE_LOW_CODE_DESIGNER}",
-        "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}"
+        "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}",
+        "REACT_APP_SHOW_PREMIUM_ICON": "${REACT_APP_SHOW_PREMIUM_ICON}",
+        "REACT_APP_IS_ENTERPRISE": "${REACT_APP_IS_ENTERPRISE}",
+        "REACT_APP_CLARITY_KEY": "${REACT_APP_CLARITY_KEY}"
       }
