--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -508,3 +508,6 @@ webclient: "{{.Chart.Name}}"
 webname: formsflow
 UserAccesPermissions: ""
 Language: ""
+ShowPremiumIcon: ""
+IsEnterPrise: ""
+ClarityKey: ""
