--- a/charts/forms-flow-admin/templates/proxy-config.yaml
+++ b/charts/forms-flow-admin/templates/proxy-config.yaml
@@ -13,7 +13,7 @@ data:
     events { worker_connections 1024; }
     http {
       server {
-        listen 80;
+        listen {{ .Values.ingress.servicePort }};
         location /admin {
           sub_filter ="/ ="/admin/;
           sub_filter ="/api/v1/swagger.json ="/admin/api/v1/swagger.json;
@@ -26,7 +26,7 @@ data:
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header Content-Type application/json;
-          proxy_pass http://localhost:{{ .Values.ingress.servicePort }};
+          proxy_pass http://localhost:{{ .Values.containerPorts.http }};
         }
       }
     }
