--- a/charts/forms-flow-data-analysis/templates/deployment.yaml
+++ b/charts/forms-flow-data-analysis/templates/deployment.yaml
@@ -195,6 +195,14 @@ spec:
             {{- if .Values.sidecars }}
             {{- include "common.tplvalues.render" ( dict "value" .Values.sidecars "context" $) | nindent 8 }}
             {{- end }}
+        - name: nginx
+          image: {{ include "forms-flow-data-analysis.nginx.image" . }}
+          ports:
+            - containerPort: {{ .Values.ingress.servicePort }}
+          volumeMounts:
+            - name: nginx-config-volume
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
       volumes:
       - name: data-analysis-logs
         emptyDir: {}
