--- a/charts/forms-flow-data-analysis/templates/proxy-config.yaml
+++ b/charts/forms-flow-data-analysis/templates/proxy-config.yaml
@@ -13,7 +13,7 @@ data:
     events { worker_connections 1024; }
     http {
       server {
-        listen 80;
+        listen {{ .Values.ingress.servicePort }};
         location /analysis {
           rewrite ^/analysis/(.*)$ /$1 break;
           sub_filter '="/' '="/analysis/';
@@ -25,11 +25,11 @@ data:
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header SCRIPT_NAME /analysis;
-          proxy_pass http://localhost:{{ .Values.ingress.servicePort }};
+          proxy_pass http://localhost:{{ .Values.containerPorts.http }};
         }
         location /analysis/swagger.json {
           proxy_set_header Host $http_host;
-          proxy_pass http://localhost:{{ .Values.ingress.servicePort }}/swagger.json;
+          proxy_pass http://localhost:{{ .Values.containerPorts.http }}/swagger.json;
         }
       }
     }
