--- a/charts/forms-flow-documents-api/templates/proxy-config.yaml
+++ b/charts/forms-flow-documents-api/templates/proxy-config.yaml
@@ -13,7 +13,7 @@ data:
     events { worker_connections 1024; }
     http {
       server {
-        listen 80;
+        listen {{ .Values.ingress.servicePort }};
         location /docapi {
           sub_filter ="/docapi/swaggerui/ ="/docapi/swaggerui/;
           sub_filter_once off;
@@ -24,7 +24,7 @@ data:
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header SCRIPT_NAME /docapi;
-          proxy_pass http://localhost:{{ .Values.ingress.servicePort }};
+          proxy_pass http://localhost:{{ .Values.containerPorts.http }};
         }
       }
     }
