--- a/charts/forms-flow-forms/templates/proxy-config.yaml
+++ b/charts/forms-flow-forms/templates/proxy-config.yaml
@@ -13,7 +13,7 @@ data:
     events { worker_connections 1024; }
     http {
       server {
-        listen 80;
+        listen {{ .Values.ingress.servicePort }};
         location /formio/ {
           rewrite ^/formio/(.*)$ /$1 break;
           proxy_set_header Host $http_host;
@@ -22,7 +22,7 @@ data:
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header Content-Type application/json;
-          proxy_pass http://localhost:{{ .Values.ingress.servicePort }};
+          proxy_pass http://localhost:{{ .Values.containerPorts.http }};
         }
       }
     }
