--- a/charts/forms-flow-analytics/templates/ingress.yaml
+++ b/charts/forms-flow-analytics/templates/ingress.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "redash.fullname" . -}}
 {{- $ingressPathType := .Values.ingress.pathType -}}
+{{- $ingressPortNumber := .Values.ingress.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -37,7 +38,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: 80
+                  number: {{ $ingressPortNumber }}
         {{- end }}
   {{- end }}
 {{- end }}
