--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -361,14 +361,16 @@ server:
   priorityClassName:
   
   extraContainers:
-    - name: nginx
-      image: nginx:latest
-      ports:
-        - containerPort: 80
-      volumeMounts:
-        - name: nginx-config-volume
-          mountPath: /etc/nginx/nginx.conf
-          subPath: nginx.conf
+    image:
+      registry: docker.io
+      # image.repo -- Redash image name used for server and worker pods
+      repo: nginxinc/nginx-unprivileged
+      # image.tag -- Redash image [tag](https://hub.docker.com/r/redash/redash/tags)
+      tag: latest
+      # image.pullPolicy - Image pull policy
+      pullPolicy: IfNotPresent
+    ContainerPort: 8080
+
 
 service:
   # service.annotations -- Annotations to add to the service
@@ -381,10 +383,10 @@ service:
   externalTrafficPolicy: ""
   # service.port -- Service external port
   port: 5000
-  
+
   sidecar:
-    port: 80
-    httpPort: 80  
+    port: 8080
+    httpPort: 8080  
 ingress:
   # ingress.enabled -- Enable ingress controller resource
   enabled: true
@@ -400,7 +402,7 @@ ingress:
   #ingress.pathType -- How ingress paths should be treated.
   pathType: Prefix
   
-  port: 80
+  port: 8080
   # ingress.tls -- Ingress TLS configuration
   tls: []
   #  - secretName: forms-flow-analytics-test.aot-technologies.com-tls
