--- a/charts/forms-flow-analytics/templates/server-deployment.yaml
+++ b/charts/forms-flow-analytics/templates/server-deployment.yaml
@@ -65,6 +65,9 @@ spec:
           image: {{ .Values.server.extraContainers.image.registry }}/{{ .Values.server.extraContainers.image.repo }}:{{ .Values.server.extraContainers.image.tag }}
           ports:
             - containerPort: {{ .Values.server.extraContainers.ContainerPort }}
+          {{- with .Values.server.extraContainers.resources }}
+          resources: {{ toYaml . | nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: nginx-config-volume
               mountPath: /etc/nginx/nginx.conf
