Updated docker image tags as "latest" for release

--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: formsflow/forms-flow-bpm
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v7.0.0-alpha"
+  tag: "latest"
   pullSecrets:
     - forms-flow-ai-auth
 ## @param nameOverride String to partially override common.names.fullname
