--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -12,15 +12,15 @@ data:
   KEYCLOAK_CLIENT: "{{ tpl .Values.webclient . }}"
   APPLICATION_NAME: "{{ tpl .Values.webname . }}"
   USER_ACCESS_PERMISSIONS: "{{ .Values.UserAccesPermissions }}"
-  PUBLIC_WORKFLOW_ENABLED: "false"
-  OPENTELEMETRY_SERVICE: "false"
+  PUBLIC_WORKFLOW_ENABLED:  "{{ tpl .Values.web.public_workflow_enabled . }}"
+  OPENTELEMETRY_SERVICE:  "{{ tpl .Values.web.opentelemetry_service . }}"
   WEB_BASE_CUSTOM_URL: "{{ tpl .Values.web.base_custom_url . }}"
   CUSTOM_THEME_URL: "{{ tpl .Values.web.custom_theme_url . }}"
-  ENABLE_FORMS_MODULE: "true"
-  ENABLE_TASKS_MODULE: "true"
-  ENABLE_DASHBOARDS_MODULE: "true"
-  ENABLE_PROCESSES_MODULE: "true"
-  ENABLE_APPLICATIONS_MODULE: "true"
+  ENABLE_FORMS_MODULE: "{{ tpl .Values.web.enable_forms_module . }}"
+  ENABLE_TASKS_MODULE: "{{ tpl .Values.web.enable_tasks_module . }}"
+  ENABLE_DASHBOARDS_MODULE: "{{ tpl .Values.web.enable_dashboards_module . }}"
+  ENABLE_PROCESSES_MODULE: "{{ tpl .Values.web.enable_processes_module . }}"
+  ENABLE_APPLICATIONS_MODULE: "{{ tpl .Values.web.enable_applications_module . }}"
   REACT_APP_LANGUAGE: "{{ tpl .Values.Language . }}"
   REACT_APP_SHOW_PREMIUM_ICON: "{{ tpl .Values.ShowPremiumIcon . }}"
   REACT_APP_IS_ENTERPRISE: "{{ tpl .Values.IsEnterPrise . }}"
