--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -220,6 +220,8 @@ draft_enabled: "true"
 export_pdf_enabled: "false"
 elastic_server: "forms-flow-elastic:9200"
 redis_url: "redis://redis-exporter:6379/1"
+custom_submission_url: ""
+custom_submission_enabled: "false"
 ipaas:
   embedded_api_key: ""
   jwt_private_key: ""
