--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -503,6 +503,13 @@ analytics:
 web:
   base_custom_url: ""
   custom_theme_url: ""
+  enable_forms_module: "true"
+  enable_tasks_module: "true"
+  enable_dashboards_module: "true"
+  enable_processes_module: "true"
+  enable_applications_module: "true"
+  public_workflow_enabled: "false"
+  opentelemetry_service: "false"
 config_path: /usr/share/nginx/html/config/
 webclient: "{{ .Chart.Name }}"
 webname: formsflow
