updated env reference in forms-flow-api

--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -131,7 +131,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 key: {{ .ExistingDatabaseHostKey | default "FORMSFLOW_API_HOSTNAME" }}
-                name: "{{ $configmapName }}"
+                name: "{{ $secretName }}"
           {{- end }}
           - name: JWT_OIDC_ALGORITHMS
             valueFrom:
