--- a/charts/forms-flow-forms/templates/deployment.yaml
+++ b/charts/forms-flow-forms/templates/deployment.yaml
@@ -129,8 +129,13 @@ spec:
               configMapKeyRef:
                 key: MULTI_TENANCY_ENABLED
                 name: "{{ .Values.formsflow.configmap }}"
+          - name: DEBUG
+            valueFrom:
+              configMapKeyRef:
+                key: DEBUG
+                name: "{{ .Chart.Name }}"
           {{- if .Values.extraEnvVars }}
-          {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 8 }}
+          {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 10 }}
           {{- end }}
           envFrom:
           {{- if .Values.extraEnvVarsCM }}
